# University_Code

./: .gitignore  GitHub.txt  pagamenti.txt  test_per_pull.txt  text.txt
AMPL/00 Esame/: mod1.mod  run1.run  run2.run
AMPL/Fertilizzanti/: Fertilizzanti.mod
AMPL/Fumetti/: mod.mod  mod2.mod
AMPL/Runaway Spa/: Runaway.run
AMPL/Salse/: mod1.mod  run.run
Basi di Dati/Esercitazione 1/: sample.db  sol.txt
Basi_di_Dati/Esercitazione_2/: script.sql
Basi_di_Dati/Esercitazione_3/: soluzioni.txt
Basi_di_Dati/Esercitazione_4/: script.sql  soluzioni.txt
Basi_di_Dati/Esercitazione_5/: Query.pgsql  Soluzioni.txt
Basi_di_Dati/Esercitazione_6/: Query.pgsql
C++ Code/Calculator/: CMakeLists.txt  calculator.cpp  calculator.h  main.cpp
C++ Code/PY Examples/: Calculator.py
Giochi/Gioco_Matteo/: .project
HTML-CSS/: formPage.html  index.html  style.css
HTML-CSS/Other Files/: ExternalCSS.html  HeaderFooter.html  InlineCSS.html  InternalCSS.html  PlaysWithCSS.html  formPage.html  index.html  lyrics.html  other.css  style.css
Java/Corso/: Main.java  Persona.java
Linguaggio C/: Frazioni  Frazioni.c  a.out  fileListe  fileListe.c  fileMatrici  fileMatrici.c  funzioni.c  tester  tester.c
Linguaggio C/Esercizi Funzioni/: Anni  Anni.c  Esercizio_2  Esercizio_2.c  a.out  esempio  esempio.c  media  media.c
Linguaggio C/Numeri in Ordine/: Numeri in ordine.c  a.out
Linguaggio C/Prove Esame/: tester  (+1 more)
Python/: main.py
SDAC/: Calendario Registrazioni 2022 (ASD).xlsx  Horner.c  Insertion_Sort.c
Sistemi Operativi/: text.c
TLC/: Dockerfile.Corso  rebuild_corso.sh
(+1099 files in other folders)
